<resources>
    <string name="app_name">DiaryPraksa</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calendar">calendar</string>
    <string name="edit">edit</string>
    <string name="settings">settings</string>
    <string name="how_are_you">How are You?</string>
    <string name="how_do_you_feel">How do You feel?</string>
    <string name="i_feel">I feel...</string>
    <string name="my_text">This is an <u>underline</u>.</string>
    <string name="list_of_friends">List of friends</string>
    <string name="telephone">Telephone</string>
    <string name="email">Email</string>
    <string name="messageBody">Tell me how do you feel today</string>

    <string name="surname">Surname</string>


    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="save">SAVE</string>
    <string name="title_activity_chat_bot">ChatBotActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>